# db_course_proj

./: config.py  example.env  main.py  pyproject.toml  readme.md  requirements.txt
src/: api.py  db_manager.py  init_db.py  utils.py
