[tool.poetry]
name = "db-course-proj"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
psycopg2 = "^2.9.10"
requests = "^2.32.3"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.0"


[tool.poetry.group.lint.dependencies]
isort = "^6.0.1"
black = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '.git'

[tool.isort]
line_length = 119